# scaffold-kit

./: .env.example  .gitignore  Dockerfile.tmpl  Makefile  README.md  README.md.tmpl  copier.yaml  copier.yml  pyproject.toml
.cursor/plans/: scaffold-kit_fixes_plan_35bf0172.plan.md
.cursor/rules/: conventional-commit-suggestion.mdc  mandatory-automated-tests.mdc
.github/workflows/: ci.yml.tmpl
adr/: README.md
cycles/cycle-1/: pitch.md  review.md
discovery/: idea-0.md
docs/: domain.md
infra/docker/: Dockerfile.tmpl
scaffold_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shapes/: feature-0.md
src/: README.md
template/: .dockerignore  .editorconfig  .env.example.jinja  .gitignore  .worktreeinclude  BACKLOG.md  CLAUDE.md.jinja  IDEA.md.jinja  Makefile  Makefile.jinja  Makefile.tmpl  README.md.jinja  README.md.tmpl  copier.yaml  docker-compose.yml.jinja  docker-compose.yml.tmpl  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
template/docs/: design.md  domain.md  {% if include_domain_model %}domain.md.jinja{% endif %}  {% if include_domain_model %}domain.md.tmpl{% endif %}
tests/: README.md  test_ci_workflow_template.py  test_copier_yaml.py  test_cycles_templates.py  test_doc_templates_path_references.py  test_docker_compose_template.py  test_dockerfile_template.py  test_docs_templates.py  test_domain_template.py  test_editorconfig_template.py  test_main_template_multistack.py  test_makefile_template.py  test_openapi_template.py  test_render.py  test_root_readme_template.py  test_scaffold_kit_repo_readme.py  test_src_readme_template.py
(+33 files in other folders)
