[project]
name = "scaffold-kit"
version = "2.0.0"
description = "Copier template — flat & pragmatic Python project scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "copier>=9.0",
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
